cloud_portal/front_end/app/styles/main.scss
@import '_theme_palette';
@import 'custom/_custom_palette';
@import '_theme_variables';
@import '../bower_components/bootstrap-sass/assets/stylesheets/bootstrap';
@import '_theme_override';

@import '_big_brother';

html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 80px;
}
footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 48px;
  border-top: 1px solid $common-border-color;
  padding-bottom: 2px;


  .nav > li > a{
    font-size: $font-size-small;
    padding: 10px;
    color:  $light12;
    &:hover{
      color:$light16;
    }
  }
  .navbar-right > li > a{
    color:$light8;
    &:hover{
      color:$light12;
    }
  }
}



.process-button {
  display: inline-block;
  position: relative;

  .processing {
    visibility: hidden;
  }

  .progress {
    width: 100%;
    height: 100%;
    position: absolute;
  }

  .progress-bar {
    font-size: 14px;
    padding: 6px 12px;
  }
}

.loading .auth-visible,
.loading .auth-hidden{
    display: none;
}

.authorized .auth-hidden,
.authorized .loading-visible{
    display: none;
}

.anonymous .auth-visible,
.anonymous .loading-visible{
    display: none;
}


.panel.hoverable:hover{
    box-shadow: 0px 2px 2px 0px transparentize(dark(15),0.8);
}

@media (min-width: $screen-sm-min) {
  .hoverable .hover-visible {
    visibility: hidden;
  }

  .hoverable:hover .hover-visible {
    visibility: visible;
  }
}



.process-loading{
  border:none;
  box-shadow:none;
}
.no-access-panel
{
  width:100%;
  height:100%;
  z-index:100;

  min-height: 100px;
  border-top:1px solid $common-border-color;
  border-bottom:1px solid $common-border-color;

  text-align: center;

  background-color: $body-bg;
  font-weight: lighter;
  color:    $gray-light;
  font-size: $font-size-h2;
  display: table;
}

.no-access-panel-body{
  display: table-cell;
  vertical-align: middle;
}

.preloader{
    display: none;
}
.process-loading{
    position: relative;
}
.process-loading>*{
    visibility:hidden;
}


.process-loading>.preloader {

  display: block;
  visibility: visible;
  position:absolute;

  width:100%;
  height:100%;
  min-height: 144px;
  z-index:100;

  padding-top:80px;

  text-align: center;

  background-color: $body-bg;
}
.process-loading>.preloader>img{
    width:64px;
    height:64px;
}

/* inline mode for portal: no header, dialogs behave like full-screen pages */
.inline-portal header{
    display: none;
}

.inline-portal>.container{
    padding:0;
}

.inline-portal .modal{
    overflow-y: hidden;
}

.inline-portal .modal-dialog{
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
}

.inline-portal .modal-content{
    box-shadow: none;
    border: none;
    height:100%;
    border-radius:0;
}


.inline-portal .modal-header .close{
    display: none;
}

@mixin ellipsis{
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 100%;
  line-height: initial;
}

.user-name{
  @include ellipsis;
}
td{
    &.user-name{
      max-width: 200px;
    }
    &.user-email{
      @include ellipsis;
      max-width: 240px;
    }
    &.user-role{
      @include ellipsis;
      max-width: 120px;
    }
}
.button-cell{
    padding-right: 6px !important;
    padding-left: 6px !important;
    text-align: center;
}
.system-button {
  user-select: none;
  cursor: pointer;
  overflow: hidden;

  h2 {
    line-height: 24px;
    margin-bottom: 2px;

    @include ellipsis;
  }
  .user-name{
    font-size: $font-size-h6;
    line-height:16px;
    font-weight: bold;
    display: block;
    margin-bottom:12px;
  }

  .label {
    display: inline-block;
    vertical-align: bottom;

    height: 20px;
    margin-top: 12px;
    line-height: 14px;
    border-radius: $border-radius-small;

    font-weight: normal;
    font-size: $font-size-h6;
  }
}

.btn-wrapper {
  display: inline-block;
  padding-top: 12px;
  padding-left: 8px;
}

@media (min-width: $screen-sm-min) {
  .pull-right-sm {
    padding: 15px 0;
    float: right;
  }
}


.vertical-bar{
  border-right: 1px solid $common-border-color;
  height: 24px;
  margin: 16px 0;
}


@media (max-width: $grid-float-breakpoint-max) {
  .navbar-collapse .vertical-bar{
    display: none;
  }
}

/* add beta-symbol after product name everywhere */

.product-name.add-version:after{
  content: "\03B2";
  font-style: italic;
  opacity: 0.5;
  font-size: 90%;
}


.inline-block{
  display: inline-block;
}


.ng-toast {
  margin-top: 34px;

  .alert {
    margin-bottom: 8px;

    @media (max-width: $screen-sm-max) {
      min-width: 100%;
    }

    @media (min-width: $screen-sm-min) {
      min-width: 600px;
    }


    &.ng-animate {
      transition: 0.5s linear all;

      &.ng-enter {
        opacity: 0;
      }
      &.ng-enter-active{
        opacity: 1;
      }

      &.ng-leave {
        opacity: 1;
      }
      &.ng-leave-active{
        opacity: 0;
      }
    }
  }
}

.alert-top{
  position:fixed;
  top: 34px;
  left:50%;
  transform: translateX(-50%);
  z-index:1100;



  @media (max-width: $screen-sm-max) {
    min-width: 100%;
  }

  @media (min-width: $screen-sm-min) {
    min-width: 600px;
  }


 &.ng-animate {
    transition: 0.5s linear all;

    &.ng-enter {
      opacity: 0;
    }
    &.ng-enter-active{
      opacity: 1;
    }

    &.ng-leave {
      opacity: 1;
    }
    &.ng-leave-active{
       opacity: 0;
    }
  }
}

@media (min-width: $screen-sm-min) {
  // Automatically set modal's width for larger viewports
  .modal-dialog .alert-top {
    top: -74px;
  }
}

.image-link,
.image-link:hover{
  @include ellipsis;
  text-decoration: none !important;
}

.jumbotron .promo-block{
  color: $jumbotron-color;
}
.promo-block {
  padding: 32px 74px;
  text-align: center;
  color: $light15;

  h2 {
    font-weight: bold;
  }

  .promo-block {
    padding-bottom: 0;
  }

}
.jumbotron .promo-block{

}

.cloud-icon img{
  height: 60px;
}

.jumbotron .cloud-icon img{
  height: 100px;
}

.welcome-caption{
  font-size: 36px;
  color: $brand_core !important;
}

h1.process-success{
  text-align: center;
  line-height: 1.5;
}

.search-block{
    padding-top:10px;
    padding-bottom:10px;
    /*border-top:1px solid $common-border-color;
    border-bottom:1px solid $common-border-color;*/
    margin-bottom: 10px;
}
.inactive{
    opacity:0.7;
    cursor: pointer;
}

